# yaml2script

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  README.md  create_doc  pyproject.toml  yaml2script.py  zenodo-add-communities.json  zenodo-add-related_identifiers.json
docs/: conf.py  index.rst  script_yaml2script.rst
src/yaml2script/: __init__.py
src/yaml2script/script/: __init__.py  yaml2script.py
tests/: main.py
tests/data/: 01_extract_pre-commit  01_gitlab-ci.yaml  01_pre-commit-config.yaml  02_extract_my_python-job  02_gitlab-ci.yaml  02_pre-commit-config.yaml  03_extract_ruff  03_gitlab-ci.yaml  03_pre-commit-config.yaml  04_gitlab-ci.yaml  05_gitlab-ci.yaml  05_pre-commit-config.yaml
